# book-hub-back

./: .env.local  .gitignore  Cargo.toml  Shuttle.toml
.shuttle/: config.toml
.sqlx/: query-1332037521adecbb1c6030cb293e1d48f0802eb8ef3093269ac7b469b89b0bcd.json  query-17207c51158a3a46567d7f0bdf967ef99c1557999f0a5656f8c7f3d3afd50018.json  query-4ebdc511ea6f7bdcd61f9e9145c5b5f91f755a6eb06834a8c86bfdaf15d9ba10.json  query-916f62b3c6e7ac4091c0ee494d2a3206ef0a562f8b58ba5c10df3d180f6e109f.json  query-bedfcfae1471f46882747b5cb8ff27a9fe54f1da4efb0fc12232d72b5b7aa12f.json  query-cf7686ccb64a55586ac050c394abca998d58774016116cdfc1466027911ddf34.json
src/: error.rs  main.rs  routers.rs  state.rs
src/dbaccess/: book.rs  course.rs  mod.rs
src/handlers/: book.rs  course.rs  general.rs  mod.rs
src/models/: book.rs  course.rs
