[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.6.0"
dotenvy = "0.15.0"
openssl = {version = "0.10.38",features = ["vendored"]}
serde = {version = "1.0.210" , features = ["derive"]}

chrono = {version = "0.4.19",features = ["serde"] }
sqlx = { version = "0.8.2",default_features = false,features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}
actix-cors = "0.7.0"
